# datatel_comms_pipeline

./: .gitignore  README.md  main.py  pyproject.toml  workflow_settings.yaml
definitions/curated/: dw_user_analytics.sqlx
definitions/enriched/: agg_arpu.sqlx  agg_country_revenue.sqlx  agg_monthly_revenue.sqlx  agg_session_distribution.sqlx  agg_user_revenue.sqlx  agg_user_usage.sqlx  session_buckets.sqlx
definitions/raw/: stg_billing.sqlx  stg_customers.sqlx  stg_sessions.sqlx
explorations/: churn_risk_detection.sql  customer_segmentation.sql  data_freshness_check.sql  revenue_vs_usage_mismatch.sql  top_customers.sql
utilities/: data_generator.py  gcs_uploader.py
validation/: stage_1_checks.py
